[project]
name = "triton-unfold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cupy-cuda12x>=13.3.0",
    "easydict>=1.13",
    "jaxtyping>=0.2.36",
    "numpy==1.22.4",
    "pytest>=8.3.4",
    "setuptools>=75.6.0",
    "sigpy>=0.1.26",
    "torch>=2.5.1",
    "triton==3.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
-ra -q \
-m 'not slow and not gpu and not plot' \
"""
# Other things you can do:
# --ignore libraries \ # Ignore the libraries folder in the root
# --ignore-glob **/data/* \  # Ignore any directories named data

filterwarnings = [
    "ignore::DeprecationWarning:sigpy.*",
    "ignore::DeprecationWarning:cupy.*",
]
markers = [
    "slow: tests that are slow (deselect with '-m \"not slow\"')",
    "big: tests that require large memory (cpu or gpu)",
    "gpu: tests that require a gpu",
    "plot: tests that involve plotting",
    "filesys: tests that use the filesystem",
]
